Adjust styling of nav for responsive. Change duplicate IDs to Class

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <div id="benefits-text">
             <h3>Benefits of Meditation:</h3>
                 <ul>
-                    <li>Promotes emotional health by reducing stress, anxiety and depression</li>
-                    <li>Accessible anywhere</li>
-                    <li>Decreases blood pressure</li>
-                    <li>Improves sleep</li>
-                    <li>Can generate kindness to yourself and others</li>
-                    <li>Helps control addictions and pain</li>
+                    <li>Promotes emotional health by reducing stress, anxiety and depression.</li>
+                    <li>Accessible anywhere.</li>
+                    <li>Decreases blood pressure.</li>
+                    <li>Improves sleep.</li>
+                    <li>Can generate kindness to yourself and others.</li>
+                    <li>Helps control addictions and pain.</li>
                 </ul>
             
     
