--- a/postures.html
+++ b/postures.html
@@ -70,9 +70,9 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="assets/images/conditioning.jpg" alt="woman sitting in seated meditation 
+            <img class="postures-image" src="assets/images/conditioning.jpg" alt="woman sitting in seated meditation 
             posture smiling in the sun">
-            <div id="postures-a">
+            <div class="postures-text-right">
                 <h4>Conditioning</h4>
                 <h5>What is it?</h5>
                 <p>Conditioning is an exercise that is good to practice before you start your meditation practice. It 
@@ -93,9 +93,9 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img id="postures-image" src="assets/images/seated-birdseye.jpg" alt="Person sat in seated meditation posture 
+            <img class="postures-image" src="assets/images/seated-birdseye.jpg" alt="Person sat in seated meditation posture 
             viewed from above">
-            <div id="postures-b">
+            <div class="postures-text-left">
                 <h4>Seated on the Floor</h4>
                 <h5>What is it?</h5>
                 <p>
@@ -121,8 +121,8 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="assets/images/lying.jpg" alt="woman lying down meditating">
-            <div id="postures-a">
+            <img class="postures-image" src="assets/images/lying.jpg" alt="woman lying down meditating">
+            <div class="postures-text-right">
                 <h4>Lying Down</h4>
                 <h5>What is it?</h5>
                 <p>A beneficial posture for those who find discomfort in a sitting posture even with the added props 
@@ -145,9 +145,9 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img id="postures-image" src="assets/images/standing.jpg" alt="woman standing in a meditation posture with 
+            <img class="postures-image" src="assets/images/standing.jpg" alt="woman standing in a meditation posture with 
             fingers spread">
-            <div id="postures-b">
+            <div class="postures-text-left">
                 <h4>Standing</h4>
                 <h5>What is it?</h5>
                 <p>Standing meditation is the most active of the postures and is a good choice if you struggle with staying
@@ -168,8 +168,8 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="assets/images/meditation-props.jpg" alt="Meditation cushion and mat on the ground">
-            <div id="postures-a">
+            <img class="postures-image" src="assets/images/meditation-props.jpg" alt="Meditation cushion and mat on the ground">
+            <div class="postures-text-right">
                 <h4>Props</h4>
                 <h5>What are they?</h5>
                 <p>Props are useful pieces of equipment that can be invested in as your meditation practice grows to be used
