--- a/techniques.html
+++ b/techniques.html
@@ -65,17 +65,17 @@
 
 <!-- Counting section -->
 <section class="counting-parallax">    
-    <div id="techniques-title">
+    <div class="techniques-title">
         <h4>Counting</h4>
     </div>
         <div class="techniques">
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>What is it?</h5>
                 <p>It is exactly what it sounds like. During this practice you will be focussing your 
                 attention on something other than your thoughts. Your mind will naturally wander so this method is a good
                 practice to help bring the attention back to focussing on something other than distracting thoughts.</p>
             </div>
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>Benefits</h5>
                 <ul>
                     <li>Good beginners technique.</li>
@@ -83,7 +83,7 @@
                     <li>Easy to develop into longer meditations.</li>
                 </ul>
             </div>
-            <div id="techniques-text"> 
+            <div class="techniques-text"> 
                 <h5>Methods</h5>
                 <h6>Breath Counting</h6>
                 <p>In your comfortable meditation posture with eyes closed and after your conditioning. 
@@ -102,11 +102,11 @@
 
 <!-- Focus section -->
 <section class="focus-parallax">
-    <div id="techniques-title">
+    <div class="techniques-title">
         <h4>Focus</h4>
     </div>    
         <div class="techniques">
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>What is it?</h5>
                 <p>The focus meditation also know as Samatha or focussed attention meditation (FAM) in some practices 
                     is a practice where the practitioner focusses the attention on a thought, sound, sensation or object of their choosing.
@@ -115,7 +115,7 @@
                     focus for this meditation. 
                 </p>
             </div>
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>Benefits</h5>
                 <ul>
                     <li>Good beginners technique.</li>
@@ -123,7 +123,7 @@
                     <li>Increases focus and concentration.</li>
                 </ul>
             </div>
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>Methods</h5>
                 <h6>Candle</h6>
                 <p>In your comfortable meditation posture with eyes closed and after your conditioning. Have a lit candle
@@ -141,11 +141,11 @@
 
 <!-- Noting section -->
 <section class="noting-parallax">
-    <div id="techniques-title">
+    <div class="techniques-title">
         <h4>Noting</h4>
     </div>    
         <div class="techniques">
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>What is it?</h5>
                 <p>Noting or mental noting is a technique used to help the practitioner notice and let go of distractions 
                     by practicing awareness of thoughts, sensations and sounds that have caused the practitioner to lose 
@@ -153,7 +153,7 @@
                     detachment from distracting thoughts, sensations and sounds. 
                 </p>
             </div>
-            <div id="techniques-text">
+            <div class="techniques-text">
                 <h5>Benefits</h5>
                 <ul>
                     <li>Helps create awareness and strengthen focus.</li>
@@ -161,7 +161,7 @@
                     <li>Healthy detachment from distractions.</li>
                 </ul>
             </div>
-            <div id="techniques-text">  
+            <div class="techniques-text">  
                 <h5>Method</h5>
                 <p>In your comfortable meditation posture with eyes closed and after your conditioning. Bring your attention
                     to your breath as your focus for your meditation. When you hear a sound make a mental note with the word 
@@ -173,7 +173,7 @@
             </div>    
     </div>
 </section>
-</main>   
+</main>
     
 <!-- Footer -->
 <footer>
