Change alt attribute of seated image on postures.html

--- a/postures.html
+++ b/postures.html
@@ -93,8 +93,7 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img class="postures-image" src="assets/images/seated.webp" alt="Person sat in seated meditation posture 
-            viewed from above">
+            <img class="postures-image" src="assets/images/seated.webp" alt="Person sat in seated meditation posture">
             <div class="postures-text-left">
                 <h4>Seated on the Floor</h4>
                 <h5>What is it?</h5>
