Add content to postures.html

--- a/postures.html
+++ b/postures.html
@@ -62,8 +62,7 @@
                 for a longer period of time with minimal effort and making it accessible to everybody. 
                 <br>
                 <br>
-                What is important is that with each posture is that you find balance between being calm and alertness.
-                Keeping the spine straight has been proven by science to help find this balance and mental clarity.
+                What is important is that with each posture is that you find balance between being calm and alert.
             </p>
         </div>
     </section>
