Remove changes to postures images and styling

--- a/postures.html
+++ b/postures.html
@@ -69,7 +69,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img class="postures-image" src="assets/images/conditioning-small.webp" alt="woman sitting in seated meditation 
+            <img class="postures-image" src="assets/images/conditioning.webp" alt="woman sitting in seated meditation 
             posture smiling in the sun">
             <div class="postures-text-right">
                 <h4>Conditioning</h4>
@@ -92,7 +92,7 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img class="postures-image" src="assets/images/seated-small.webp" alt="Person sat in seated meditation posture">
+            <img class="postures-image" src="assets/images/seated.webp" alt="Person sat in seated meditation posture">
             <div class="postures-text-left">
                 <h4>Seated on the Floor</h4>
                 <h5>What is it?</h5>
@@ -119,7 +119,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img class="postures-image" src="assets/images/lying-small.webp" alt="woman lying down meditating">
+            <img class="postures-image" src="assets/images/lying.webp" alt="woman lying down meditating">
             <div class="postures-text-right">
                 <h4>Lying Down</h4>
                 <h5>What is it?</h5>
@@ -143,7 +143,7 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img class="postures-image" src="assets/images/standing-small.webp" alt="woman standing in a meditation posture with 
+            <img class="postures-image" src="assets/images/standing.webp" alt="woman standing in a meditation posture with 
             fingers spread">
             <div class="postures-text-left">
                 <h4>Standing</h4>
@@ -166,7 +166,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img class="postures-image" src="assets/images/ props-small.webp" alt="Meditation cushion and mat on the ground">
+            <img class="postures-image" src="assets/images/ props.webp" alt="Meditation cushion and mat on the ground">
             <div class="postures-text-right">
                 <h4>Props</h4>
                 <h5>What are they?</h5>
